--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
+    <a href="./.well-known/nostr.json">Link nostr</a>
   </body>
 </html>
