--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <a href="https://www.universalname.space/name/anajipa">View my UNS profile</p>
+    <a href="https://dev.universalname.space/name/anamaria">View my UNS profile</p>
   </body>
 </html>
