--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Index</title>
   </head>
   <body>
-    <a href="https://dev.universalname.space/name/anamaria">View my UNS profile</p>
+    <a href="https://dev.universalname.space/name/anamaria">View my UNS profile</a>
+    <a href="https://olyn.com">Olyn - Asset Registry</a>
   </body>
 </html>
